--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-animated-slider": "^2.0.0",
     "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
+    "react-horizontal-scrolling-menu": "^2.7.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-simple-star-rating": "^3.0.0",
